# veupath-redmine-client

./: .gitignore  README.md  pyproject.toml  setup.py
lib/veupathdb/redmine/: check_genome_issues.py  check_missed_issues.py  check_rnaseq_issues.py  client.py  genome.py  get_missed_issues.py  redmine_issue.py  rnaseq.py  veupath_params.py
scripts/: check_genome_issues.py  check_missed_issues.py  check_organism_abbrevs.py  check_rnaseq_issues.py  check_single_issue.py
src/veupath/redmine/client/: __init__.py  genome.py  issue_utils.py  orgs_utils.py  redmine_issue.py  rnaseq.py  veupath_params.py
src/veupath/redmine/client/checks/: __init__.py  check_genome_issues.py  check_missed_issues.py  check_organism_abbrevs.py  check_rnaseq_issues.py  check_single_issue.py
veupath/redmine/client/: __init__.py  genome.py  issue_utils.py  orgs_utils.py  redmine_issue.py  rnaseq.py
